test_translator/tests/data/checkpoint_2/core/fail/91_exception_message_contains/solution.py
def validate(x):
    if x < 0:
        raise ValueError("bad input")  # Missing "negative"
